chandeliers-lus/tests/compile_fail/ui/tc/extern/missing-const.stderr
error[E0425]: cannot find value `MISSING` in this scope
 --> tests/compile_fail/ui/tc/extern/missing-const.rs:2:18
  |
2 |     extern const MISSING: float;
  |                  ^^^^^^^ not found in this scope
